CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ENABLE_LANGUAGE(C CXX)

PROJECT(cpt_yahsp_library)

IF( CPT_WITH_MPI )
    FIND_PACKAGE(MPI)
ENDIF()

IF( CPT_WITH_OMP )
    FIND_PACKAGE(OpenMP REQUIRED)
    IF(OPENMP_FOUND)
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
      SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    ENDIF()

    ADD_DEFINITIONS(-DWITH_OMP)
ENDIF()

FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(FLEX REQUIRED)

ADD_DEFINITIONS(-Wall -D__STDC_CONSTANT_MACROS -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS)


    message("Building CPT-YAHSP in RELEASE mode !")
    SET(CMAKE_C_FLAGS_RELEASE "-O2")
    SET(CMAKE_CXX_FLAGS_RELEASE "-O2")
    ADD_DEFINITIONS(-O2)


INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/src
  ${CMAKE_CURRENT_SOURCE_DIR}/gdsl/src
  )

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

ADD_SUBDIRECTORY(gdsl)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(application)
